--- a/web/index.html
+++ b/web/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="./public/icon_temp.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Interview Sim AI</title>
+  <title>Interview Simulator AI</title>
 </head>
 
 <body>
